@@ -21,4 +21,9 @@ class Machinist::Generators::ModelGeneratorTest < Rails::Generators::TestCase
     assert_file "config/initializers/machinist.rb"
     assert_no_file "test/fixtures/accounts.yml"
   end
+  
+  test "invoke when fixture replacement is given with custom file extenstion" do
+    content = run_generator %w(Account name:string age:integer -r machinist --extenstion i.like.using.blueprint)
+    assert_file "test/blueprints/accounts.i.like.using.blueprint"
+  end
 end
